# MCServerLauncher-Future-Web

./: .gitignore  .gitmodules  .prettierignore  .prettierrc  AGENTS.md  Cargo.toml  README.md  README_ZH.md  TASKS.md  app.config.ts  app.vue  crowdin.yml  eslint.config.js  i18n.config.ts  nuxt.config.ts  package.json  pnpm-lock.yaml  setup_cn.sh  setup_en.sh  turbo.json  typedoc.json
apps/app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
apps/app/src-tauri/capabilities/: default.json
apps/app/src-tauri/icons/: icon.icns
apps/app/src-tauri/src/: lib.rs  main.rs
apps/web/: .gitignore  .prettierignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  README_ZH.md  app.config.ts  app.vue  crowdin.yml  eslint.config.js  i18n.config.ts  nuxt.config.ts  package.json  rsbuild.config.ts  setup_en.sh  tsconfig.json  tsconfig.node.json
apps/web/app/: app.vue  i18n.config.ts
apps/web/assets/i18n/: af-ZA.json  ar-SA.json  ca-ES.json  cs-CZ.json  da-DK.json  en-US.json  fi-FI.json  it-IT.json  ja-JP.json  nl-NL.json  no-NO.json  pl-PL.json  pt-BR.json  pt-PT.json  ro-RO.json  ru-RU.json  sv-SE.json  tr-TR.json  uk-UA.json  zh-CN.json  zh-MEME.json  zh-TW.json
apps/web/layouts/: auth.vue  default.vue  empty.vue
apps/web/middleware/: auth.global.ts
apps/web/pages/: connect.vue  debug.vue  index.vue  instances.vue  news.vue
apps/web/pages/auth/: login.vue  register.vue
apps/web/src/: api.rs  config.rs  main.rs  token.rs  user.rs  utils.rs
apps/web/src-frontend/: App.vue  Auth.vue  env.d.ts  index.ts
apps/web/utils/: auth.ts  common.ts  db.ts
(+267 files in other folders)
