[package]
name = "mcsl_future_web"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
env_logger = "0.11.9"
include_dir = "0.7"
log = "0.4.29"
mime_guess = "2.0.5"
serde_json = "1.0.149"
serde = { "version" = "1.0.149", features = ["derive"] }
rand = "0.10.0"
sha2 = "0.10.9"
hex = "0.4.3"
regex = "1.12.3"
lazy_static = "1.5.0"
